[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprite/menu.png" type="Texture" id=1]
[ext_resource path="res://sprite/menu_play.png" type="Texture" id=2]
[ext_resource path="res://menu_button.gd" type="Script" id=3]
[ext_resource path="res://sprite/menu_play_perma.png" type="Texture" id=4]
[ext_resource path="res://sprite/menu_help.png" type="Texture" id=5]

[node name="Node2D" type="CanvasLayer"]

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="main_tex" type="TextureRect" parent="CenterContainer"]
margin_left = 384.0
margin_top = 172.0
margin_right = 640.0
margin_bottom = 428.0
mouse_filter = 2
texture = ExtResource( 1 )

[node name="play_normal" type="TextureRect" parent="CenterContainer/main_tex"]
margin_left = 63.0
margin_top = 113.0
margin_right = 193.0
margin_bottom = 142.0
texture = ExtResource( 2 )
script = ExtResource( 3 )

[node name="play_perma" type="TextureRect" parent="CenterContainer/main_tex"]
margin_left = 62.6594
margin_top = 142.892
margin_right = 192.659
margin_bottom = 171.892
texture = ExtResource( 4 )
script = ExtResource( 3 )

[node name="help" type="TextureRect" parent="CenterContainer/main_tex"]
margin_left = 63.0
margin_top = 172.675
margin_right = 193.0
margin_bottom = 201.675
texture = ExtResource( 5 )
script = ExtResource( 3 )
[connection signal="mouse_entered" from="CenterContainer/main_tex/play_normal" to="CenterContainer/main_tex/play_normal" method="mouse_enter"]
[connection signal="mouse_exited" from="CenterContainer/main_tex/play_normal" to="CenterContainer/main_tex/play_normal" method="mouse_exit"]
[connection signal="mouse_entered" from="CenterContainer/main_tex/play_perma" to="CenterContainer/main_tex/play_perma" method="mouse_enter"]
[connection signal="mouse_exited" from="CenterContainer/main_tex/play_perma" to="CenterContainer/main_tex/play_perma" method="mouse_exit"]
[connection signal="mouse_entered" from="CenterContainer/main_tex/help" to="CenterContainer/main_tex/help" method="mouse_enter"]
[connection signal="mouse_exited" from="CenterContainer/main_tex/help" to="CenterContainer/main_tex/help" method="mouse_exit"]
